# saint-sorting

./: .gitignore  .gitignore.swp  Cargo.toml  README.md  dump.rdb  run_with_browser.zsh  run_with_selenium.zsh  run_without_browser.zsh
.github/workflows/: clippy-fmt.yml  rust.yml
hello-world/src/: main.rs
saint-sorting/: Cargo.toml  firebase-service-account.json
saint-sorting/contents/: top.html
saint-sorting/src/: auth_error.rs  lib.rs  main.rs  sign_in.rs  sign_up.rs
saint-sorting/src/api/: auth_error.rs  mod.rs  sign_in.rs  sign_up.rs
saint-sorting/src/contents/: mod.rs
saint-sorting/src/contents/book/: page_view.rs
saint-sorting/src/contents/clothing/: clothing_error.rs  delete.rs  mod.rs  page_view.rs  read.rs  read_list.rs  write.rs
saint-sorting/src/firestore/: db_top.rs  delete.rs  firestore_error.rs  mod.rs  read.rs  write.rs
saint-sorting/src/firestore_db/: dto.rs  errors.rs  firebase_rest_to_rust.rs  mod.rs
saint-sorting/src/firestore_db/documents/: mod.rs  read.rs  write.rs
saint-sorting/src/session/: index.rs  login.rs  logout.rs  mod.rs  session.rs
saint-sorting/templates/: book.html  clothing.css  clothing.html  db_top.html  login.html  top.html  user.html  user_home.html  write_firestore.html
saint-sorting/templates/css/: clothing.css
src/: auth_failure.html  lib.rs  main.rs
src/api/: sign_in.rs
src/auth/: auth_error.rs  mod.rs  page_view.rs  sign.rs  sign_in.rs  sign_up.rs
templates/: clothing.html  index.html  top.html  user_home.html
tests/: README.md  test_main.rs
thirtyfour_test/: Cargo.toml  README.md
(+16 files in other folders)
