[package]
name = "saint-sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6.2"
awc = { version = "3.0.1", features = ["openssl"] }
chrono = { version = "0.4.19", features = ["serde"] }
tera= "1"
fireauth = "0.1.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"

actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-redis = "0.12.0"

env_logger = "0.9"
rand = "0.8"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

firestore-db-and-auth = "0.6.1"

