[package]
name = "saint-sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
awc = { version = "3.0.1", features = ["openssl"] }
chrono = { version = "0.4.19", features = ["serde"] }
tera= "1"
reqwest = { version = "0.11.10", features = ["json"] }
fireauth = "0.1.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
